fix(connections panel): fix text align and direction in connection panel when showing rtl texts.

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1484,7 +1484,8 @@ div.interfaceLinks-row a {
 .readerPanel .content {
   direction: ltr; /* Even in Hebrew Interface, we want scroll bars on the right */
 }
-.readerPanel .he {
+.readerPanel .he,
+.readerPanel .content .rtl {
   direction: rtl;
   text-align: right;
   unicode-bidi: initial;
